--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -100,9 +100,171 @@ and
 
 \noindent We do not observe certain post-$a^*$ life-cycle profiles for outcomes that are important for estimating the lifetime benefits of ABC/CARE. The main examples are parental labor income, subject labor income, public-transfer income, and health-related outcome variables. ABC/CARE provided full-day childcare. It relaxed the time constraints of the mothers of the treated children, who were able to work more. Potentially, it might shift the life-cycle profiles of the mothers, either by allowing them to take more schooling or obtain more work experience. We estimate these profiles. Similarly, a comprehensive evaluation accounts for the effect on the life-cycle profiles of subject labor income and public-transfer income. We follow the strategy outlined in Section~\ref{section:cbamethodology} and implemented in Section~\ref{section:cbaresults} to identify and estimate these profiles and forecast post-$a^\ast$ outcomes.\footnote{In this section, attrition or partial observations is not an issue: the predictors that we use to construct out-of-sample forecasts are classified as complete data (see Appendices~\ref{app:method_fullobs} and \ref{app:method_partialobs}).}.\\
 
-\noindent This appendix documents how we implement this strategy and provides complementary evidence supporting it, cited throughout the main text. We proceed as follows. Appendix~\ref{app:datasets} describes the auxiliary datasets that we use to forecast out of sample. Appendix~\ref{appendix:match} provides details on the matching strategy used to construct the synthetic or virtual treatment and controls groups. Appendix~\ref{appendix:pred} documents the variables that we use to make forecasts. The next three appendices provide tests for the key assumptions listed in Section~\ref{section:cbamethodology}: Appendix~\ref{app:containsupport} provides tests of Assumption~\ref{ass:contain}, Appendix~\ref{app:endogeneity} provides tests for Assumption~\ref{ass:exog}, and Appendix~\ref{app:invariance} provides tests for Assumption~\ref{ass:summary}.\footnote{We provide tests for Assumption~\ref{ass:alignment} in Section~\ref{sec:accoutning-age-period-cohort}.} As in the main text, our forecasting strategy treats a subject's transfer and labor income jointly---although we provide some separate details when necessary. For parental labor income we provide three different forecasting strategies and document them in Appendix~\ref{app:parentalincome}.\\
+\noindent This appendix documents how we implement this strategy and provides complementary evidence supporting it, cited throughout the main text. We proceed as follows. Appendix~\ref{app:datasets} describes the auxiliary datasets that we use to forecast out of sample. Appendix~\ref{appendix:just} provides the formal, methodological conditions to produce out-of-sample counterfactuals based on forecasts. It overlaps with some of the material presented in the main text with the idea to propose a self-contained section leading to a formal theorem. Appendix~\ref{appendix:match} provides details on the matching strategy used to construct the synthetic or virtual treatment and controls groups. Appendix~\ref{appendix:pred} documents the variables that we use to make forecasts. The next three appendices provide tests for the key assumptions listed in Section~\ref{section:cbamethodology}: Appendix~\ref{app:containsupport} provides tests of Assumption~\ref{ass:contain}, Appendix~\ref{app:endogeneity} provides tests for Assumption~\ref{ass:exog}, and Appendix~\ref{app:invariance} provides tests for Assumption~\ref{ass:summary}.\footnote{We provide tests for Assumption~\ref{ass:alignment} in Section~\ref{sec:accoutning-age-period-cohort}.} As in the main text, our forecasting strategy treats a subject's transfer and labor income jointly---although we provide some separate details when necessary. For parental labor income we provide three different forecasting strategies and document them in Appendix~\ref{app:parentalincome}.\\
 
 \noindent We devote separate appendices to the discussion of crime and health forecasts in Appendix~\ref{appendix:crime} and Appendix~\ref{appendix:health}, respectively.
+
+\subsubsection{Constructing Out-of-Sample Counterfactuals}\label{appendix:just}
+
+\noindent We now formalize our analytical framework and its underlying assumptions. To avoid notational clutter, we henceforth suppress individual $i$ subscripts. Our analysis is based on a causal (structural) model for treatment ($d=1$) and control ($d=0$) counterfactual outcomes for outcome $j$ measured at age $a$ in sample $k \in \{e,n\}$, where $e$ denotes membership in the experimental sample and $n$ denotes membership in the auxiliary sample:
+\begin{equation}\label{eq:outcome}
+Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a}, \quad j \in \mathcal{J}_a,
+\end{equation}
+where $\phi^d_{k,j,a}\left( \cdot, \cdot \right)$ is an invariant structural production relationship mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into output $Y^d_{k,j,a}$ holding error term $\varepsilon^d_{k,j,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometTheory} for discussions. Our analysis applies the methodology of these papers.} We normalize $\varepsilon^d_{k,j,a}$ to have mean zero. Among the $\bm{X}^d_{k,a}$ are variables caused by treatment, including lagged dependent variables. In this general framework, the relationships between the dependent and right-hand side variables in Equation~\eqref{eq:outcome} do not necessarily coincide across the samples, $k \in \{e,n\}$.\\
+
+\noindent Let $\bm{Y}_k^d$ denote the vector of all outcomes at all ages for $k \in \{e, n \}$, when treatment status is fixed to $d$. Similarly, $\bm{X}_k^d$ is the vector of all causal predictors of $\bm{Y}_k^d$ at all ages. Both $\bm{Y}_k^d$ and $\bm{X}_k^d$ include the full set of possible outcomes over the life cycle, even though they are not observed after age $a^*$. The background variables may have different distributions in the two samples. We denote the joint distribution of these vectors conditional on $\bm{B}_k = \bm{b}$ by $F_{\bm{Y}_k^d, \bm{X}_k^d | \bm{B}_k = \bm{b}}(\cdot,\cdot)$.\\
+
+\noindent In the experimental sample, parents of eligible children ($\bm{B}_e \in \mathcal{B}_{0}$), always agree to participate in the program ($W_e = 1$) and accept treatment ($R_e = D_e$). We assume that this condition holds in the auxiliary sample. Given this condition, we can use $D_e$ and $R_e$ interchangeably and apply a standard \citet{Quandt_1972_JASA} switching regression model to write the outputs and inputs generated by treatment as
+\begin{spacing}{1}
+\begin{align}\label{eq:countersystem}
+Y_{k,j,a} =& \left( 1 - D_k \right) Y_{k,j,a}^0 + \left( D_k \right) Y_{k,j,a}^1, \\
+&&j \in \mathcal{J}_a, a \in \{1,\dots,A\}, \quad k \in \{e,n\} \nonumber \\
+\bm{X}_{k,a} =& \left( 1 - D_k \right) \bm{X}_{k,a}^0 + \left( D_k \right) \bm{X}_{k,a}^1.\nonumber\footnotemark
+\end{align}
+\end{spacing}
+\footnotetext{We keep the conditioning on $\bm{B} \in \mathcal{B}_0$ implicit.}
+\noindent The fact that $D_e = R_e$ allows us to use experimental data (for $a \in \{1, \dots,a^*\}$) to identify the distribution of $Y_{e,j,a}^d$ (i.e., $Y_{e,j,a}^d$ when fixing treatment status ($d$)).\\
+
+\paragraph{Accounting for Age, Period, and Cohort Effects} \label{sec:accoutning-age-period-cohort}
+
+\noindent The auxiliary data $(n)$ come from older cohorts not exposed to the program, for whom we observe more complete segments of their life cycles. We do not observe what treatment status $d$ would have been in the auxiliary data. Even if we did, we do not know if cohort ($c$) or time ($t$) effects make the experiences of the individuals in the auxiliary sample different from the experiences of the individuals in the experimental sample.\\
+
+\noindent To formalize this problem, and our solution to it, let $Y_{j,k,a,c,t}^d$ be outcome $j$ for sample $k$ at age $a$ for birth cohort $c$ at time $t$ when treatment is fixed to $d$. We make the following assumption. It allows us to circumvent the problem by assuming cohort and time effects operate identically across the experimental ($e$) and non-experimental ($n$) samples in the following sense:
+
+\onehalfspacing
+\begin{assumption}\label{ass:alignment} \textbf{Alignment of Cohort and Time Effects}\\
+For experimental sample cohort $c_{e}$ and auxiliary sample cohort $c_{n}$:
+\begin{equation}
+Y_{e,a,c_{e},t_{e}}^d = Y_{n,a,c_{n},t_{n}}^d
+\end{equation}
+for $d \in \{ 0, 1\}$, $a \geq a^*$, where $t_{e}, t_{n}$ are the years for which cohorts $c_{e}, c_{n}$ are observed, where $t_e = t_n + c_e - c_n$, and $t_n$ is the year that the age $a$ outcome is observed for cohort $n$ ($t_n = a + c_n$). $\square$
+\end{assumption}
+\doublespacing
+
+\noindent Notice that $Y^d_{n,a,{c_n},{t_n}}$ is the outcome for treatment status $d$ in the auxiliary sample. Assumption~\ref{ass:alignment} does not rule out cohort or period effects. However, it rules out any \emph{differences} in cohort and time effects of the auxiliary sample and the experimental sample when they reach the age of those in the auxiliary sample.\\
+
+\noindent We henceforth drop the ``$c$'' and ``$t$'' sub-indices. The out-of-sample year effect for the experimental sample is assumed to be the same as for the auxiliary sample measured at year $t_n$. We can weaken Assumption~\ref{ass:alignment} if there is prior knowledge about year and/or cohort effects or if we can parameterize estimable functions of $c$ and $t$.\footnote{See \cite{Heckman_Robb_1985_JE}. For health, cohort effects could be very substantial (e.g., the growth of medical costs) and we account for this as explained in Section~\ref{section:health} and  Appendix~\ref{appendix:health}.} In the sensitivity analyses reported below, we examine plausible alternative assumptions about cohort and time effects drawing on results in the empirical literature. Examples include a rate of decay in labor income due to a time effect as a crisis or a cohort effect due to skill depreciation. We also consider wage increases due to alternative scenarios of gains in productivity, or time effect due to plausible changes in the structure of medical costs.\\
+
+\paragraph{Support Conditions}
+
+\noindent  We require that the support of the auxiliary sample contains the support of the experimental sample. This assumption allows us to find counterpart values of $\bm{X}^d_{k,a}$, $\bm{B}$, and $\bm{Y}_{k,a}$ in the control and experimental samples.\\
+
+\onehalfspacing
+\begin{assumption} \label{ass:contain} \textbf{Support Conditions} \\
+For $a \in \{ 1, \ldots, A \}$, the support of $\left( \bm{Y}^d_{e,a}, \bm{X}^d_{e,a}, \bm{B}_e \right)$ in the experimental sample is contained in the support of $\left( \bm{Y}^d_{n,a}, \bm{X}^d_{n,a}, \bm{B}_n \right)$ in the auxiliary sample:
+\begin{equation}
+supp( \bm{Y}_{e,a}, \bm{X}^d_{e,a}, \bm{B}_e ) \subseteq supp( \bm{Y}_{n,a}, \bm{X}^d_{n,a}, \bm{B}_n ), \quad d \in \{0,1\}. \quad \square
+\end{equation}
+\end{assumption}
+\doublespacing
+This assumption is straightforward to test for ages $a\leq a^\ast$. It is satisfied in our samples, as shown in Appendix~\ref{app:containsupport}.
+
+\subsubsection{Conditions for Valid Out-of-Sample Forecasts}
+
+\noindent A strong sufficient condition for identifying the distribution of life-cycle profiles of individuals in the experimental sample using individuals in the auxiliary samples is Condition~\ref{cond:cond1}:
+
+\onehalfspacing
+\begin{condition} \textbf{Equality of Distributions Across the Experimental and Auxiliary Samples \label{cond:cond1}}
+\begin{equation}
+F_{\bm{Y}_e^d, \bm{X}_e^d | \bm{B}_e = \bm{b}} \left( \cdot, \cdot \right) = F_{\bm{Y}_n^d, \bm{X}_n^d | \bm{B}_n = \bm{b}} \left( \cdot, \cdot \right), \quad d \in \{0,1\}
+\end{equation}
+\noindent for $\bm{Y}_e^d, \bm{X}^d_e | \bm{B}_e = \bm{b}$ and $\bm{Y}_n^d, \bm{X}^d_n | \bm{B}_n = \bm{b}$ contained in the support of the experimental sample $supp\left(\bm{Y}^d_{e}, \bm{X}^d_{e}, \bm{B}_{e} \right)$.
+\end{condition}
+\doublespacing
+
+\noindent  Since we are only interested in means for benefit/cost analysis, we can get by with a weaker requirement for conditional means, which has testable implications, as we show below:
+
+\onehalfspacing
+\begin{condition} \textbf{Equality in Conditional Expectations Across the Experimental and Auxiliary Samples \label{cond:cond2}}
+\begin{equation}
+\mathbb{E} \left[ \bm{Y}_e^d |  \bm{X}_e^d = \bm{x}, \bm{B}_e = \bm{b} \right] = \mathbb{E} \left[ \bm{Y}_n^d |  \bm{X}_n^d = \bm{x}, \bm{B}_n = \bm{b} \right], \quad d \in \{0,1\}
+\end{equation}
+for $d \in \{0, 1 \}$ over $supp\left(\bm{Y}^d_{e,a}, \bm{X}^d_{e,a}, \bm{B}_e\right)$.
+\end{condition}
+\doublespacing
+
+\noindent Since we are primarily interested in treatment effects, we can get by with an even weaker condition:
+
+\onehalfspacing
+\begin{condition} \textbf{Equality in Mean Treatment Effects Across the Experimental and Auxiliary Samples \label{cond:cond3}}
+\begin{equation}
+\mathbb{E} \left[ \bm{Y}_e^1 - \bm{Y}_e^0 | \bm{B}_e = \bm{b} \right] = \mathbb{E} \left[ \bm{Y}_n^1 - \bm{Y}_n^0 | \bm{B}_n = \bm{b} \right]
+\end{equation}
+over $supp\left(\bm{Y}^d_{e,a}, \bm{B}_e\right)$.\footnotemark
+\end{condition}
+\footnotetext{We test the difference between the observed and forecasted treatment effect, because as we describe above, an equal difference (as opposed to equal levels) is sufficient. Even though the point estimate of the difference is 2,037.08 ($-$2,256.09) for males (females, we find that this difference is not statistically different than 0 for both genders).}
+\doublespacing
+We could simply invoke Condition~\ref{cond:cond2} or \ref{cond:cond3} and be done. Our approach is to examine and test (when possible) assumptions that justify the treatment effects, and Condition~\ref{cond:cond2} is useful for doing so.
+
+\paragraph{Exogeneity}
+
+\noindent Conditions~\ref{cond:cond1} to \ref{cond:cond3} do not require that we take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$. However, exogeneity facilitates the use of economic theory to generate and interpret treatment effects, to test the validity of our synthetic control groups, and to find auxiliary sample counterparts to treatments and controls. It also facilitates matching, one of the methods used in this paper to construct synthetic treatment and control groups.\footnote{See \cite{Heckman_Navarro_2004_REStat}.} For these purposes, we assume:
+
+\onehalfspacing
+\begin{assumption}\label{ass:exog} \textbf{Exogeneity}\\
+For all $a, a'' \in \{ 1, \ldots, A \}$ and for $d, d' \in \{0,1\}$,
+\begin{equation}
+\varepsilon^d_{k,j,a} \indep \bm{X}^{d^{\prime}}_{k,a^{''}} | \bm{B}_k = \bm{b}
+\end{equation}
+for all $\bm{b}$ in the support of $\bm{B}_k, \: k \in \{e,n\}$, for all outcomes $j \in \mathcal{J}_{a}$, where ``$\bm{M} \indep \bm{N}|\bm{Q}$'' denotes independence of $\bm{M}$ and $\bm{N}$ given $\bm{Q}$. $\square$
+\end{assumption}
+\doublespacing
+
+\noindent Assumption~\ref{ass:exog} is much stronger than needed. It justifies Conditions~\ref{cond:cond1} and~\ref{cond:cond2}, but these conditions only require that endogeneity processes are governed by the same relationships in the experimental and auxiliary samples. However, when this assumption and our other assumptions hold, we generate testable implications of our forecasting model.\\
+
+\noindent To appreciate the benefit of Assumption~\ref{ass:exog}, consider the following example. Say we want to predict future labor income and we use years of education as a main component of $\bm{X}_{k,{a''}}^{d'}$. The joint distribution of $\varepsilon_{k,j,a}^d$ and $\bm{X}_{k,{a''}}^{d'}$ could differ substantially across experimental and non-experimental samples. In the experimental sample, years of education are increased by treatment, which is randomly assigned. In the non-experimental samples, however, there is no treatment. Individuals with high observed levels of education could very well have a high value of  $\varepsilon_{k,j,a}^d$ (e.g., ability bias). Assumption~\ref{ass:exog} avoids this problem when making forecasts. However, under further assumptions, it is testable and fixable.\\
+
+\noindent In Appendix~\ref{app:endogeneity}, we test Assumption~\ref{ass:exog} for a variety of outcomes and fail to reject the null of exogeneity. We discuss these tests in Section~\ref{section:accendog}. In Appendix~\ref{appendix:predsensitivity}, we analyze standard panel data models for the outcome equations as well as instrumental variable approaches to account for lagged dependent variables and serial correlation. Our estimates are robust even when we allow for different failures of Assumption~\ref{ass:exog}. We also present non-parametric matching estimates. Their near-coincidence with the matching estimates with those from the structural model is further support of the validity of Assumption~\ref{ass:exog}.\\
+
+\paragraph{Structural Invariance} \label{sec:structural-invariance}
+
+\noindent We assume that the variables $\bm{X}_{k,a}^d$ fully summarize treatment in the sense that any effect that treatment has on outcomes operates through the inputs, $\bm{X}_{k,a}^d$, and not through shifts in the production function relating inputs to outputs (see \citealp{Heckman_Pinto_etal_2013_PerryFactor}). Assumption~\ref{ass:summary} formalizes this condition.\\
+
+\onehalfspacing
+\begin{assumption} \label{ass:summary} \textbf{Structural Invariance}\\
+For all $\bm{x}, \bm{b} \in supp(\bm{X}^d_{e,a}, \bm{B}_e), k \in \{e,n\}$
+\begin{align}
+\phi_{k,j,a}^0 \left( \bm{x}, \bm{b} \right) &= \phi_{k,j,a}^1 (\bm{x}, \bm{b}) \\   \nonumber
+                                                                     &=: \phi_{j,a} (\bm{x}, \bm{b}),
+\end{align}
+$\phi^d_{k,j,a}(\bm{x})$ is the function generating the causal effect of setting $\bm{X}^d_{k,a}=\bm{x}$ holding $\varepsilon^d_{k,j,a}$ fixed for $a \in \{1,\dots,A\}$ for any outcome $j \in \mathcal{J}_{a}$. $\square$
+\end{assumption}
+\doublespacing
+
+\noindent This assumption has two distinct aspects which could be broken down into two separate assumptions: (i) the structural functions evaluated with the same arguments have identical values for treatment and control groups in the experimental sample, and (ii) the structural relationships are identical in the experimental and auxiliary samples. As previously noted, exogeneity is not needed to justify Conditions~\ref{cond:cond1} through \ref{cond:cond3}. But in the absence of exogeneity, the relationship between the inputs, $\bm{X}^d_{k,a}$, and the errors, $\bm{\varepsilon}^d_{k,a}$, likely differs across experimental ($e$) and non-experimental ($n$) samples because randomization imparts a source of exogenous variation to $\bm{X}^d_{e,a}$ that is absent in non-experimental samples.\\
+
+\paragraph{Testing Exogeneity}\label{section:accendog}
+
+\noindent In  Appendix~\ref{app:endogeneity}, we report tests for endogeneity in the experimental and auxiliary samples used in this paper. We assume that $\varepsilon_{k,j,a}^d, , k \in \{e,n\}$ follows a factor structure.\footnote{Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \cite{Cunha_Heckman_2008_JHR,Cunha_Heckman_etal_2010_est_tech_cognoncog} and \cite{Agostinelli_Wiswall_2016_EstimatingTech}.} We provide evidence supporting exogeneity in both samples for the predictor variables used in our empirical analyses. Once we condition on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity.\\
+
+\paragraph{Testable Implications}
+
+\noindent Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, Equation~\eqref{eq:countersystem}, and the assumption $\mathbb{E}(\varepsilon^d_{k,j,a})=0$ for all $a \in \{1,\dots,A\}$ generate testable restrictions for our forecasting models. Exogeneity and invariance enable us to jointly test the two aspects of structural invariance for $a \leq a^*$, when $Y_{k,j,a}$ is observed in both the experimental and auxiliary samples:
+
+\begin{eqnarray}
+\mathbb{E} \left[ Y_{e,j,a}^1 | \bm{X}_{e,a}^1 = \bm{x}, \bm{B}_{e} = \bm{b}, D = 1   \right] &=&  \mathbb{E} \left[ Y_{e,j,a}^0 | \bm{X}_{e,a}^0 = \bm{x}, \bm{B}_{e} = \bm{b}, D = 0   \right]  \\
+\text{ and} & \nonumber \\
+\mathbb{E} \left[ Y_{e,j,a}^d | \bm{X}_{e,a}^d = \bm{x}, \bm{B}_{e} = \bm{b}, D = d   \right] &=&  \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}, \bm{B}_{n} = \bm{b} \right] \text{ for }  d \in \{0,1\}.
+\end{eqnarray}
+Under our assumptions, experimental treatment effects should equal differences in the conditional means of the non-experimental samples evaluated at $\bm{X}_{n,a} = \bm{x}^1$ and  $\bm{X}_{n,a} = \bm{x}^0$:
+
+\begin{eqnarray}
+\mathbb{E} \left[ Y_{e,j,a}^1 |  \bm{X}_{e,a}^1 = \bm{x}^1, \bm{B}_e = \bm{b}, D = 1 \right] - \mathbb{E} \left[ Y_{e,j,a}^0 |  \bm{X}_{e,a}^0 = \bm{x}^0, \bm{B}_e = \bm{b}, D = 0 \right] = \nonumber \\
+\mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}^1, \bm{B}_n = \bm{b} \right] - \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}^0, \bm{B}_n = \bm{b} \right].
+\end{eqnarray}
+In Appendix~\ref{app:invariance}, we test and do not reject all three hypotheses, singly and jointly for $a\leq a^*$.\footnote{This holds when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).}
+
+\paragraph{Summarizing the Implications of Exogeneity and Structural Invariance}
+
+\noindent Collecting results, we obtain the following theorem:
+
+\onehalfspacing
+\setcounter{theorem}{0}
+\begin{theorem}\label{theorem:main} \textbf{Valid Out-of-Sample Forecasts} \\
+Under Assumptions~\ref{ass:alignment}-\ref{ass:summary}, Conditions~\ref{cond:cond2} and \ref{cond:cond3} hold for any value of $\left( \bm{X}^d_{k,a}, \bm{B}_k \right)$. \\
+\emph{This is an immediate consequence of the cited assumptions.} $\Box$
+\end{theorem}
+\doublespacing
 
 \subsubsection{Overview of Our Approach and A Summary of Findings}
 
