--- a/output/income-inputs-description.tex
+++ b/output/income-inputs-description.tex
@@ -5,7 +5,7 @@
 & Control & Average & Control & Average  \\
 & Mean & Treatment Effect & Mean & Treatment Effect  \\
 \midrule
-Math Scores & $     95.82 $  & $      4.16 $ & $     95.04 $ & $      1.97 $ \\
+PIAT Scores & $     95.82 $  & $      4.16 $ & $     95.04 $ & $      1.97 $ \\
 (ages 5-7)                  &                                               & ($      2.53 $) & & ($       2.44 $) \\
 Years of Education & $     11.76 $ & $      2.14 $ & $     12.90 $ & $      0.53 $ \\
 (age 30)                    &                                               & ($      0.62 $) & & ($      0.51 $) \\
