--- a/output/income-inputs-description.tex
+++ b/output/income-inputs-description.tex
@@ -5,7 +5,7 @@
 & Control & Average & Control & Average  \\
 & Mean & Treatment Effect & Mean & Treatment Effect  \\
 \midrule
-Math Scores & $     95.82 $  & $      4.16 $ & $     95.04 $ & $      1.97 $ \\
+PIAT Scores & $     95.82 $  & $      4.16 $ & $     95.04 $ & $      1.97 $ \\
 \quad (ages 5-7)                    &                                               & ($      2.53 $) & & ($       2.44 $) \\
 High School Graduation & $      0.51 $ & $      0.25 $ & $      0.61 $ & $      0.07 $ \\
 \quad (age 30)                      &                                               & ($      0.12 $) & & ($      0.12 $) \\
