introduction edits and changes to citations

--- a/heckman.bib
+++ b/heckman.bib
@@ -4535,6 +4535,16 @@
   Timestamp                = {2014.06.16}
 }
 
+@TechReport{Autor_Wasserman_2014_REPORT,
+  Title                    = {Wayward Sons: The Emerging Gender Gap in Labor Markets and Education},
+  Author                   = {Autor, David H. and Wasserman, Melanie},
+  Institution              = {Third Way},
+  Year                     = {2014},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.03.27}
+}
+
 @TechReport{Avellar_2011_Lessons,
   Title                    = {Lessons learned from the home visiting evidence of effectiveness review},
   Author                   = {Avellar, Sarah and Paulsell, Diane},
@@ -9768,6 +9778,18 @@ Welfare Reform Academy},
   Volume                   = {29},
 
   Timestamp                = {2009.01.16}
+}
+
+@Conference{Bleses_etal_2017_Danish_Daycare,
+  Title                    = {Process Quality in {D}anish Daycares Serving Children 0-5 Years and Associations With Language and Pre-Literacy Outcomes},
+  Author                   = {Dorthe Bleses and Anders H{\o}jen and Peter Jensen and Laura Justice and Pauline Slot},
+  Year                     = {2017},
+
+  Address                  = {Lyon, France},
+  Organization             = {International Congress for the Study of Child Language},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.02.07}
 }
 
 @Article{Blevins_2014_QE,
@@ -17528,6 +17550,17 @@ Welfare Reform Academy},
   Timestamp                = {2013.01.24}
 }
 
+@Article{Chetty-etal-2017-NBER,
+  Title                    = {The Fading {A}merican Dream: Trends in Absolute Income Mobility Since 1940},
+  Author                   = {Chetty, Raj and Grusky, David and Hell, Maximilian and Hendren, Nathaniel and Manduca, Robert and Narang, Jimmy},
+  Journal                  = {NBER},
+  Year                     = {2016},
+  Number                   = {22910},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2018.03.09}
+}
+
 @Unpublished{Chetty_et_al_2015_Neighborhood_Children_Forthcoming,
   Title                    = {The Effects of Exposure to Better Neighborhoods on Children: New Evidence from the Moving to Opportunity Experiment},
   Author                   = {Chetty, Raj and Hendren, Nathaniel and Katz, Lawrence F.},
@@ -17549,30 +17582,28 @@ Welfare Reform Academy},
   Timestamp                = {2014.02.11}
 }
 
-@Article{Chetty-etal_2014_QJE,
-  Title                    = {Where is the Land of Opportunity? {T}he Geography of Intergenerational Mobility in the {U}nited {S}tates},
-  Author                   = {Chetty, Raj and Hendren, Nathaniel and Kline, Patrick and Saez, Emmanuel},
-  Journal                  = {Quarterly Journal of Economics},
+@Article{Chetty-etal-2014-AER,
+  Title                    = {Is the {U}nited {S}tates Still a Land of Opportunity? Recent Trends in Intergenerational Mobility},
+  Author                   = {Chetty, Raj and Hendren, Nathaniel and Kline, Patrick and Saez, Emmanuel and Turner, Nicholas},
+  Journal                  = {American Economic Review},
   Year                     = {2014},
-  Number                   = {4},
-  Pages                    = {1553--1623},
-  Volume                   = {129},
+  Number                   = {5},
+  Pages                    = {141-147},
+  Volume                   = {104},
 
   Doi                      = {10.1093/qje/qju022},
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.03.16}
 }
 
-@TechReport{Chetty_Hendren_etal_2014_IsUnitedStates,
-  Title                    = {Is the {U}nited {S}tates Still a Land of Opportunity? {R}ecent Trends in Intergenerational Mobility},
-  Author                   = {Chetty, Raj and Nathaniel Hendren and Patrick Kline and Emmanuel Saez and Nick Turner},
-  Institution              = {NBER},
-  Year                     = {2014},
-  Number                   = {19844},
-  Type                     = {Working Paper},
+@Unpublished{Chetty_etal_2018_Race_UNPUBLISHED,
+  Title                    = {Race and Economic Opportunity in the United States: An Intergenerational Perspective},
+  Author                   = {Chetty, Raj, and Hendren, Nathaniel and R. Jones, Maggie and Porter, Sonya},
+  Note                     = {Unpublished manuscript},
+  Year                     = {2018},
 
-  Owner                    = {Jenni},
-  Timestamp                = {2014.02.11}
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.03.27}
 }
 
 @Article{Chetty_Heckman_1986_JoE,
@@ -20138,6 +20169,19 @@ Welfare Reform Academy},
   Timestamp                = {2009.01.31}
 }
 
+@Article{Courieroux_etal_1984_Poisson_Econometrica,
+  Title                    = {Pseudo Maximum Likelihood Methods: Applications to Poisson Models},
+  Author                   = {Courieroux, C. and Monfort, Alain and Trognon, Alain},
+  Journal                  = {Econometrica},
+  Year                     = {1984},
+  Number                   = {3},
+  Pages                    = {701--720},
+  Volume                   = {52},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.03.27}
+}
+
 @InCollection{Court_1939_Hedonic,
   Title                    = {Hedonic Price Indexes with Automotive Examples},
   Author                   = {Court, Andrew T.},
@@ -20696,17 +20740,20 @@ Welfare Reform Academy},
   Timestamp                = {2015.11.01}
 }
 
-@Unpublished{Cunha_Heckman_2016_JoLE,
+@Article{Cunha_Heckman_2016_JoLE,
   Title                    = {Decomposing Trends in Inequality in Earnings into Forcastable and Uncertain Components},
   Author                   = {Cunha, Fl\'{a}vio and Heckman, James J.},
-  Note                     = {Forthcoming, \emph{Journal of Labor Economics}},
+  Journal                  = {Journal of Labor Economics},
   Year                     = {2016},
+  Number                   = {S2},
+  Pages                    = {S31--S65},
+  Volume                   = {34},
 
   Owner                    = {Stallings_LLC},
   Timestamp                = {2015.01.17}
 }
 
-@Unpublished{Cunha-Heckman_2011_UNPUB_Evolution,
+@Unpublished{Cunha_Heckman_2011_UNPUB_Evolution,
   Title                    = {The Evolution of Inequality, Heterogeneity and Uncertainty in Labor Earnings in the {U.S.} Economy},
   Author                   = {Cunha, Fl\'{a}vio and Heckman, James J.},
   Note                     = {Unpublished manuscript, University of Pennsylvania},
@@ -21479,6 +21526,16 @@ Welfare Reform Academy},
   Note                     = {Manuscript under review, \emph{American Economic Review}},
   Number                   = {11279},
   Type                     = {Working Paper}
+}
+
+@Article{Dahl_Moretti_2008_RES,
+  Title                    = {The Demand for Sons},
+  Author                   = {Dahl, Gordon B. and Moretti, Enrico},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {2008},
+  Number                   = {4},
+  Pages                    = {1085--1120},
+  Volume                   = {75}
 }
 
 @TechReport{Dahl-DeLeire_2008_Association,
@@ -25890,6 +25947,16 @@ Welfare Reform Academy},
   Timestamp                = {2016.04.12}
 }
 
+@Article{Ehrlich_1981_Usefulness_AER,
+  Title                    = {On the Usefulness of Controlling Individuals: An Economic Analysis of Rehabilitation, Incapacitation and Deterrence},
+  Author                   = {Ehrlich, Isaac},
+  Journal                  = {The American Economic Review},
+  Year                     = {1981},
+  Number                   = {3},
+  Pages                    = {307--322},
+  Volume                   = {71}
+}
+
 @Article{Ehrlich_1973_JPE,
   Title                    = {Participation in Illegitimate Activities: A Theoretical and Empirical Investigation},
   Author                   = {Ehrlich, Isaac},
@@ -26279,6 +26346,15 @@ Welfare Reform Academy},
 
   Owner                    = {Stallings_LLC},
   Timestamp                = {2017.10.27}
+}
+
+@Book{Eliot_Brain_2009_BOOK,
+  Title                    = {Pink Brain, Blue Brain: How Small Differences Grow into Troublesome Gaps -- and What We Can Do About It},
+  Author                   = {Eliot, Lise},
+  Publisher                = {OneWorld Publications},
+  Year                     = {2009},
+
+  Address                  = {Great Britain}
 }
 
 @Article{Elixhauser_etal_1993_CBA_DC,
@@ -32210,6 +32286,13 @@ Welfare Reform Academy},
   Timestamp                = {2011.07.17}
 }
 
+@Article{Gilliam_etal_2016_Early,
+  Title                    = {Do early educators’ implicit biases regarding sex and race relate to behavior expectations and recommendations of preschool expulsions and suspensions},
+  Author                   = {Gilliam, Walter S and Maupin, Angela N and Reyes, Chin R and Accavitti, Maria and Shic, Frederick},
+  Journal                  = {Research Study Brief. Yale University, Yale Child Study Center, New Haven, CT},
+  Year                     = {2016}
+}
+
 @Article{Ginsburg_etal_2012_NEJM,
   Title                    = {Correspondence: Bending the Health Care Cost Curve},
   Author                   = {Ginsburg, P.B. and Ichiseki, H. and Punwani, N.},
@@ -34268,6 +34351,18 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Year                     = {2001},
   Number                   = {31},
   Type                     = {Civic Report}
+}
+
+@Article{Greene_2008_Functional_EL,
+  Title                    = {Functional forms for the negative binomial model for count data},
+  Author                   = {Greene, William},
+  Journal                  = {Economics Letters},
+  Year                     = {2008},
+  Number                   = {3},
+  Pages                    = {585--590},
+  Volume                   = {99},
+
+  Publisher                = {Elsevier}
 }
 
 @Book{Greene_2003_BOOKeconometric,
@@ -36798,6 +36893,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Abstract                 = {This study examines the effects of family structure on child misbehavior, paying close attention to the complexity and endogeneity of family structure. We use longitudinal measures of childhood family structure to capture its complexity and fixed-effects models to control for the unobserved, time-invariant family and child characteristics, which contribute to the endogeneity of family structure. Our results suggest that, other things being equal, stability of intact, step-, and single-mother families is beneficial in lowering the risk of misbehavior, with a weaker effect for single-mother families. This finding challenges the consensus about a detrimental effect of alternative family structures and the incomplete institution thesis regarding step-families. Our analysis also provides two methodological findings: (1) duration of different types of current family structure is superior to other longitudinal measures, which, in turn, are superior to snapshot measures of family structure, and (2) conventional OLS models tend to produce downward bias for the effects of family structure on child misbehavior.},
   Owner                    = {Heckman RA},
   Timestamp                = {2008.04.08}
+}
+
+@Article{Hao_etal_2008_Games_EJ,
+  Title                    = {Games Parents and Adolescents Play: Risky Behaviour, Parental Reputation and Strategic Transfers},
+  Author                   = {Hao, Lingxin V. and Hotz, Joseph, and Jin, Ginger Z.},
+  Journal                  = {Economic Journal},
+  Year                     = {2008},
+  Number                   = {528},
+  Pages                    = {515--555},
+  Volume                   = {118},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.02.07}
 }
 
 @Article{Harberger_1964_AER,
@@ -39816,6 +39924,16 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Number                   = {4},
   Pages                    = {605--654},
   Volume                   = {64}
+}
+
+@Unpublished{Heckman_Karapakula_2018_Preschool_UNPUBLISHED,
+  Title                    = {Design-Specific Inference of Treatment Effects: Understanding the Long-term Impact of High-quality Targeted Preschool},
+  Author                   = {James J. Heckman and Ganesh Karapakula},
+  Note                     = {Unpublished manuscript, University of Chicago},
+  Year                     = {2018},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.03.27}
 }
 
 @InCollection{Heckman_Kautz_2014_FosteringandMeasuring,
@@ -45342,15 +45460,15 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Abstract                 = {This paper examines the long-term impacts of early childhood exposure to air pollution on adult outcomes using US administrative data. We exploit changes in air pollution driven by the 1970 Clean Air Act to analyze the difference in outcomes between cohorts born in counties before and after large improvements in air pollution relative to those same cohorts born in counties that had no improvements. We find a significant relationship between pollution exposure in the year of birth and later-life outcomes. A higher pollution level in the year of birth is associated with lower labor force participation and lower earnings at age 30.},
   Doi                      = {10.1086/691465},
-  Eprint                   = { 
+  Eprint                   = {
  https://doi.org/10.1086/691465
- 
+
 },
   Owner                    = {Stallings_LLC},
   Timestamp                = {2018.01.17},
-  Url                      = { 
+  Url                      = {
  https://doi.org/10.1086/691465
- 
+
 }
 }
 
@@ -45732,6 +45850,18 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Doi                      = {10.1016/j.rssm.2009.01.002},
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.03.03}
+}
+
+@InCollection{Jaffee_2009_Transmission_CHAPTER,
+  Title                    = {Intergenerational Transmission of Risk for Antisocial Behavior},
+  Author                   = {Jaffee, Sara},
+  Booktitle                = {Development and Prevention of Behaviour Problems: From Genes to Social Policy},
+  Publisher                = {Psychology Press},
+  Year                     = {2009},
+
+  Address                  = {New York, NY},
+  Editor                   = {Richard E. Tremblay, Marcel A. G. van Aken, Willem Koops},
+  Pages                    = {65--180}
 }
 
 @Article{Jaffee_Caspi_etal_2005_DevPsycho,
@@ -51322,11 +51452,11 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Owner                    = {Lynn}
 }
 
-@Article{Heckman_Landerso_2016_JoE,
+@Article{Heckman_Landerso_2017_JoE,
   Title                    = {The Scandinavian Fantasy: The Sources of Intergenerational Mobility in Denmark and the U.S.},
   Author                   = {Landers{\o}, Rasmus and Heckman, James J.},
   Journal                  = {Scandinavian Journal of Economics},
-  Year                     = {2016},
+  Year                     = {2017},
   Number                   = {1},
   Pages                    = {178--230},
   Volume                   = {119},
@@ -59992,6 +60122,16 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {7}
 }
 
+@Unpublished{Moffitt_Zhang_2018_Income_AER,
+  Title                    = {Income Volatility and the {PSID}: Past Research and New Results},
+  Author                   = {Moffitt, Robert and Zhang, Sisi},
+  Note                     = {Forthcoming, \emph{American Economic Review}},
+  Year                     = {2018},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.02.01}
+}
+
 @Unpublished{Moffitt_2008_GeneEnvironmentInteraction,
   Title                    = {Gene-Environment Interaction in Problematic and Successful Aging},
   Author                   = {Moffitt, Terrie E.},
@@ -66907,6 +67047,18 @@ Robinson, Lara Rachel},
   Timestamp                = {2011.07.17}
 }
 
+@Article{Ponitz_etal_2009_Early,
+  Title                    = {Early adjustment, gender differences, and classroom organizational climate in first grade},
+  Author                   = {Ponitz, Claire Cameron and Rimm-Kaufman, Sara E and Brock, Laura L and Nathanson, Lori},
+  Journal                  = {The Elementary School Journal},
+  Year                     = {2009},
+  Number                   = {2},
+  Pages                    = {142--162},
+  Volume                   = {110},
+
+  Publisher                = {The University of Chicago}
+}
+
 @Article{Pop-Eleches_Urquiola_2011_AER,
   Title                    = {Going to a Better School: Effects and Behavioral Responses},
   Author                   = {Pop-Eleches, Cristian and Urquiola, Miguel},
@@ -72512,6 +72664,18 @@ Robinson, Lara Rachel},
   Timestamp                = {2008.04.28}
 }
 
+@Book{Sampson_2012_City_BOOK,
+  Title                    = {Great American City: {C}hicago and the Enduring Neighborhood Effect},
+  Author                   = {Sampson, Robert J.},
+  Publisher                = {University of Chicago Press},
+  Year                     = {2012},
+
+  Address                  = {Chicago, IL},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.02.07}
+}
+
 @Article{Sampson_Laub_2003_Crim,
   Title                    = {Life-Course Desisters? {T}rajectories of Crime among Delinquent Boys Followed to Age 70},
   Author                   = {Sampson, Robert J. and Laub, John H.},
@@ -72536,6 +72700,21 @@ Robinson, Lara Rachel},
 
   Source                   = {http://www.wjh.harvard.edu/soc/faculty/sampson/articles/1997_Science.pdf},
   Timestamp                = {2009.01.11}
+}
+
+@Article{Sampson-Raudenbush-1999-AJS,
+  Title                    = {Systematic Social Observation of Public Spaces: A New Look at Disorder in Urban Neighborhoods},
+  Author                   = {Sampson, Robert J. and Raudenbush, Stephen W.},
+  Journal                  = {American Journal of Sociology},
+  Year                     = {1999},
+
+  Month                    = {November},
+  Number                   = {3},
+  Pages                    = {603-651},
+  Volume                   = {105},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2018.02.12}
 }
 
 @Article{Samuel_Widiger_2008_CPR,
@@ -84959,6 +85138,19 @@ early childhood education and pre-kindergarten programs},
   Address                  = {Princeton, NJ}
 }
 
+@Article{Wodtke_etal_2016_AJS,
+  Title                    = {Neighborhood Effect Heterogeneity by Family Income and Developmental Period},
+  Author                   = {Wodtke, Geoffrey T. and Elwert, Felix and Harding, David J.},
+  Journal                  = {American Journal of Sociology},
+  Year                     = {2016},
+  Number                   = {4},
+  Pages                    = {1168--1222},
+  Volume                   = {121},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.02.05}
+}
+
 @Article{Wojtkiewicz_1993_Demography,
   Title                    = {Simplicity and Complexity in the Effects of Parental Structure on High School Graduation},
   Author                   = {Wojtkiewicz, Roger A.},
@@ -86390,6 +86582,18 @@ early childhood education and pre-kindergarten programs},
   Volume                   = {75},
 
   Owner                    = {The Detroyer}
+}
+
+@Conference{Zhou_Navarro_2017_UNPUBLISHED,
+  Title                    = {Identifying Agent's Information Sets: an Application to a Lifecycle Model of Schooling, Consumption and Labor Supply},
+  Author                   = {Zhou, Jin and Navarro, Salvador},
+  Year                     = {2017},
+  Number                   = {277},
+  Organization             = {Society for Economic Dynamics},
+  Series                   = {2017 Meeting Papers},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.02.01}
 }
 
 @Article{Zhou-etal_2014_PDR,
