--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -37,7 +37,7 @@ $^*$For females, we do not report graduation from a four-years college because w
 \end{sidewaystable}
 \doublespacing
 
-The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are sizable. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between \$19,000 and \$24,000 (2014) after treatment. The effects strengthen when comparing treatment to low-quality childcare. Separation from the mother and being placed in relatively low-quality childcare centers has more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Kottelenberg-Lehrer_2014_Gender-Effects} and \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and the analysis of \citet{golding2016psychology}.}
+The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are sizable. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between \$19,000 and \$24,000 (2014) after treatment. The effects strengthen when comparing treatment to low-quality childcare. Separation from the mother and being placed in relatively low-quality childcare centers has more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Kottelenberg_Lehrer_2014_Gender-Effects} and \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and the analysis of \citet{Golding_Fitzgerald_2017_IMHJ}.}
 
 The results hold when using other definitions of control substitution, which vary by exposure length. They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{app:vsensitivity-twosided}). When using step-down $p$-values (see Appendix~\ref{appendix:results} for the full set of step-down $p$-values), the health results remain statistically significant for males, when compared to the full control group and when compared to alternative center childcare. The education results remain statistically significant for females, when compared to the full control group and when compared to those who stay at home.
 
