--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -1,4 +1,4 @@
-This section discusses the sources of the estimated gender differences. A major determinant is the choice of the alternative childcare arrangements. Estimated treatment effects are very similar across genders comparing treatment to staying at home full time. Males benefit much more from treatment relative to low-quality childcare compared to treatment relative to staying at home. This result is consistent with previous research that shows (i) substantial gender differences resulting from attending low-quality childcare \citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) that females are less sensitive to more stressful, low-quality environments (see, e.g., \citealp{golding2016psychology,Autor-etal_2015_Family-Disadvantage}).
+This section discusses the sources of the estimated gender differences. A major determinant is the choice of the alternative childcare arrangements. Estimated treatment effects are very similar across genders comparing treatment to staying at home full time. Males benefit much more from treatment relative to low-quality childcare compared to treatment relative to staying at home. This result is consistent with previous research that shows (i) substantial gender differences resulting from attending low-quality childcare \citep{Kottelenberg_Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) that females are less sensitive to more stressful, low-quality environments (see, e.g., \citealp{Golding_Fitzgerald_2017_IMHJ,Autor-etal_2015_Family-Disadvantage}).
 
 Table~\ref{tab:proportion-table-ranksign} shows the proportion of outcomes by category for which male outcomes exceed those of females. In Appendix~\ref{appendix:propmales-females}, we present analogous tables for staying at home and attending alternative childcare. We also partition the sample by father's presence, a potentially important moderator.\footnote{Recall that we condition on baseline variables to control for selection into childcare for controls. See Appendix~\ref{appendix:amethodology} for a sensitivity study using other methods. They produce comparable estimates, but are less precisely estimated.} Figure~\ref{fig:proportion-altpre} shows the proportions partitioned by alternative childcare setting. The males who stay at home do better than the females in cognitive and parenting measures, employment, and across all outcomes. Unlike the males who attend lower-quality alternative childcare, the males who stay at home have similar crime outcomes as the females. Given the important negative effects of male criminal activity, this finding highlights the magnitude of harm caused by low-quality alternative childcare for males.
 
@@ -15,7 +15,7 @@ Appendix~\ref{appendix:genderdifferences} reports estimates by whether or not th
 
 Another measure of home environment is maternal locus of control which is measured when the subjects were 1.5 years old.\footnote{See \citet{Rotter_1966_PMGaA}. The researchers implementing ABC/CARE slightly modified the scale to be more appropriate for the population.} An internal locus of control, which is socially desirable, indicates feelings that the respondents can control future outcomes. In contrast, an external locus of control indicates feeling that outside forces determine future outcomes (e.g. luck). We consider pairs of opposing statements. The respondent chooses the statements that more closely align with her beliefs. One point is given for each statement the respondent selects that corresponds with an external locus of control. An example is: ``In the long run people get the respect they deserve in this world'' versus ``Unfortunately, an individual's worth often passes unrecognized no matter how hard he tries.'' If the respondent selects the second statement, she has a greater perception of external locus of control.  We define a respondent as having an internal locus of control if they score below the sample mean and as having an external locus of control if they score at or above the sample mean.
 
-Figure~\ref{fig:proportion-mlocus} shows the proportion of outcomes by category that favor males classified by locus of control. In the control group, a higher internal maternal locus of control promotes better outcomes for males across all outcome categories except health. Another way to state this is that males are more negatively affected if their mothers have a higher external locus of control than are females. This is consistent with the analyses of \citet{Schore_2017_IMHJ} and \citet{golding2016psychology}. Although locus of control does not necessarily measure depression, this finding is consistent with \citet{Beeghly-etal_2017_IMHJ}, who finds that increased maternal depression leads to worse outcomes for young males relative to females.
+Figure~\ref{fig:proportion-mlocus} shows the proportion of outcomes by category that favor males classified by locus of control. In the control group, a higher internal maternal locus of control promotes better outcomes for males across all outcome categories except health. Another way to state this is that males are more negatively affected if their mothers have a higher external locus of control than are females. This is consistent with the analyses of \citet{Schore_2017_IMHJ} and \citet{Golding_Fitzgerald_2017_IMHJ}. Although locus of control does not necessarily measure depression, this finding is consistent with \citet{Beeghly-etal_2017_IMHJ}, who finds that increased maternal depression leads to worse outcomes for young males relative to females.
 
 \begin{figure}[!htbp]
 \centering
